Aggregation and improved code
Created an empty dataframe for slicing the Tailte data into - simplifies future by simply adding or removing counties from the list to process.
Aggregation for RPZ by county and for the entire country.
Example code to show how to test a lat/long for RPZ

--- a/RentPressureZone.ipynb
+++ b/RentPressureZone.ipynb
@@ -10,6 +10,7 @@
     "import geopandas as gpd\n",
     "import h3pandas\n",
     "import pandas as pd\n",
+    "from shapely.geometry import Point\n",
     "\n",
     "# Data sourced from Tailte Eireann Surveying Open Data Portal\n",
     "\n",
@@ -30,10 +31,8 @@
     "#          Cork City, Ballincollig/Carrigaline, Bandon/Kinsale, Cobh, Fermoy, Macroom, Mallow, Midleton (Cork). Killarney (Kerry).\n",
     "#          Galway City, Athenry/Oranmore, Gort/Kinvara (Galway). Westport (Mayo). Sligo/Strandhill (Sligo).\n",
     "\n",
-    "# Not elegant but otherwise need to create an empty gdf with the right cols and geometry\n",
-    "wgdf = gdf.loc[gdf['COUNTY'].eq('DUBLIN')]\n",
-    "\n",
-    "counties = ['KILDARE','LOUTH','MEATH','WICKLOW','KILKENNY','LIMERICK','WATERFORD','WESTMEATH']\n",
+    "wgdf = gpd.GeoDataFrame([], columns=gdf.columns, crs=gdf.crs)\n",
+    "counties = ['DUBLIN','KILDARE','LOUTH','MEATH','WICKLOW','KILKENNY','LIMERICK','WATERFORD','WESTMEATH']\n",
     "\n",
     "for county in counties:\n",
     "    wgdf = pd.concat([wgdf, gdf.loc[gdf['COUNTY'].eq(county)]])\n",
@@ -77,6 +76,62 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "2fa82ee8-857a-4fe8-8ea7-c9a6a3b9fe91",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# aggregate the contiguous LEAs into single regions\n",
+    "aggdf = wgdf.dissolve(by='COUNTY')\n",
+    "aggdf.to_file(\"rpz-county-Nov2023.geojson\", driver='GeoJSON')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de98a34e-9034-45a2-8217-4b755e53796f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# aggregate the all of the RPSz into one single region. \n",
+    "agg1df = wgdf\n",
+    "agg1df['label'] = 'RPZ IE November 2023'\n",
+    "agg1df = agg1df[['label','geometry']]\n",
+    "agg1df = agg1df.dissolve()\n",
+    "agg1df.to_file(\"rpz-singleshape-Nov2023.geojson\", driver='GeoJSON')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ea5f814c-1c86-4d62-8732-d5db1e46f9e3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check locations are within the RPZ polygon(s)\n",
+    "# (n) Mondrian house, Amersfoort (5.386759251930647, 52.15779006424499)\n",
+    "# (y) The Cobblestone, Dublin (-6.277864929040179, 53.34979645183707)\n",
+    "# (y) St Mary's RC Killarney Town, Kerry (-9.517927328842022, 52.05929704113583)\n",
+    "# (n) Murphy's Ice Cream, Dingle (-10.27174491630718, 52.139544817693626)\n",
+    "# (y) The Tannery, Waterford (-7.61661931069334, 52.0885018412962)\n",
+    "# (n) Enniscorthy Castle, Wexford (-6.567243451442291, 52.50135506704462)\n",
+    "\n",
+    "latlongs = [Point(5.386759251930647, 52.15779006424499),\\\n",
+    "            Point(-6.277864929040179, 53.34979645183707),\\\n",
+    "            Point(-9.517927328842022,52.05929704113583),\\\n",
+    "            Point(-10.27174491630718, 52.139544817693626),\\\n",
+    "            Point(-7.61661931069334, 52.0885018412962),\\\n",
+    "            Point(-6.567243451442291, 52.50135506704462)]\n",
+    "\n",
+    "lldf = gpd.GeoDataFrame({'geometry':latlongs},crs=agg1df.crs)\n",
+    "\n",
+    "LLinRPZdf = gpd.sjoin(lldf, agg1df, predicate='within')\n",
+    "\n",
+    "print(LLinRPZdf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a86f9127-0b52-4e46-815e-2b8e3066a81e",
    "metadata": {},
    "outputs": [],
    "source": []
